# Book-Manager-System-C

./: Book-Manager-System.sln  BorrowingRecord.cpp  BorrowingRecord.h  CMakeLists.txt  CreatTestData.cpp  DeletePoint.h  DeleteRecord.cpp  DeleteRecord.h  FindRecord.cpp  InitArray.cpp  InitData.h  README.md  Statement.h  StatisticsFine.cpp  StatisticsFine.h  StructArray.cpp  StructArray.h  TimeFunction.cpp  TimeFunction.h  UI.cpp  UI.h  main.cpp
Book-Manager-System/: Book-Manager-System.vcxproj  Book-Manager-System.vcxproj.filters  UI.cpp  UI.h  bookStruct.cpp  bookStruct.h  borrowingRecord.h  creatTestData.cpp  deletePoint.h  deleteRecord.cpp  deleteRecord.h  findRecord.cpp  initArray.cpp  initArray.h  initData.h  main.cpp  statement.h  statisticsFine.cpp  statisticsFine.h  structArray.cpp  structArray.h  timeFunction.cpp  timeFunction.h
Book-Manager-System/Debug/: vc142.idb
Book-Manager-System/Debug/Book-Man.765DDC00.tlog/: Book-Manager-System.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/: Book-Manager-System.ilk
